--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Alloc</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>Prize Tool</title>
     <style>
       /* Set default font family and size */
 body {
@@ -74,11 +73,11 @@ body {
   }
   
   button.primary {
-    background-color: #007bff;
+    background-color: #ff6600d4;
   }
   
   button.primary:hover {
-    background-color: #0056b3;
+    background-color: #ff6600;
   }
   
   button.secondary {
@@ -103,13 +102,14 @@ ul.horizontal li {
     </style>
   </head>
   <body onload="fetchData()">
-    <h1>Position Slots:</h1>
-    <h2><ol id="string-list" start="1">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Optiver_Logo.svg/1280px-Optiver_Logo.svg.png" alt="Company Logo">
+    <h1>Industry Poker Night</h1>
+    <h2>Prize Winners:</h2>
+    <h3><ol id="string-list" start="1">
       {% for string in output %}
         <li>{{ string }}</li>
       {% endfor %}
-    </ol></h2>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.3/socket.io.min.js"></script>
+    </ol></h3>
     <script>
       var socket = io.connect();
       socket.on('connect', function() {
