updated for vivcourt
vivcourt

--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@ img{
     justify-content: center;
     padding: 3em;
     align-items: center;">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Optiver_Logo.svg/1280px-Optiver_Logo.svg.png" alt="Company Logo">
+    <img alt="Vivcourt" src="https://www.vivcourt.com/wp-content/uploads/2023/02/VivCourt_Logo-02.svg">
     <h1>Industry Poker Night</h1>
     <h2>Prize Winners:</h2>
     <h3><ol id="string-list" start="1">
