--- a/templates/index.html
+++ b/templates/index.html
@@ -77,11 +77,11 @@ body {
   }
   
   button{
-    background-color: #ff6600d4;
+    background-color: #0066ff;
   }
   
   button:hover{
-    background-color: #ff6600;
+    background-color: #00b7ff;
   }
     
   ul.horizontal {
@@ -104,13 +104,16 @@ img{
     
   </head>
   <body onload="fetchData()">
-    <div style="border: 5px solid black; width: 40%; display: flex;
+    <div style="border: 5px solid black; width: 60%; display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 3em;
     align-items: center;">
-    <img alt="Vivcourt" src="https://www.vivcourt.com/wp-content/uploads/2023/02/VivCourt_Logo-02.svg">
-    <h1>Industry Poker Night</h1>
+    <!--VIVCOURT LOGO-->
+    <!--<img alt="Vivcourt Logo" src="https://www.vivcourt.com/wp-content/uploads/2023/02/VivCourt_Logo-02.svg"> -->
+    <!--IMC LOGO-->
+    <img alt="IMC Logo" src="https://www.tcgco.com/wp-content/uploads/2022/05/IMCTrading-logo-1024x190.png"></img>
+    <centre><h1>Industry Poker Night</h1></centre>
     <h2>Prize Winners:</h2>
     <h3><ol id="string-list" start="1">
       {% for string in output %}
